# agy-swap

./: .gitignore  README.md  pyproject.toml
agyswap/: __main__.py  cli.py  models.py  paths.py  statusline.py  switcher.py
agyswap/tui/: agy.tcss  app.py  dashboard.py  quota_probe.py  theme.py  watch.py  widgets.py
graphify-out/: .graphify_analysis.json  .graphify_labels.json  GRAPH_REPORT.md  graph.html  graph.json
