[project]
name = "agy-swap"
version = "0.1.4"
description = "Multi-account switcher for Antigravity CLI (agy)"
requires-python = ">=3.10"
dependencies = [
    "rich>=13.0",
    "textual>=1.0",
]

[project.scripts]
agyswap = "agyswap.cli:main"
agyswap-statusline = "agyswap.statusline:main"

[build-system]
requires = ["setuptools>=75.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]

[project.urls]
Homepage = "https://github.com/pr656d/agy-swap"
Repository = "https://github.com/pr656d/agy-swap"

[tool.setuptools.package-data]
agyswap = ["tui/*.tcss"]
